# sms_gateway

./: .gitignore  CMakeLists.txt  README.md  sms_gateway.kdev4
.kdev4/: sms_gateway.kdev4
CMakeModules/: FindGSOAP.cmake
include/: ConfigReader.h  GatewayFactory.h  GatewayManager.h  ISmsGateway.h  SmsTradeGateway.h  SmsTradeUrl.h
soap/SmsTrade/: createSmstradeHeader
src/: ConfigReader.cpp  GatewayFactory.cpp  GatewayManager.cpp  SmsTradeGateway.cpp  SmsTradeUrl.cpp
tests/: CMakeLists.txt  ConfigReaderTest.cpp  SmsTradeGatewayTest.cpp  TestRunner.cpp
